--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
 
     <licenses>
         <license>
-            <name>Liquibase EULA</name>
-            <url>https://www.liquibase.com/eula</url>
+            <name>Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
 
@@ -29,8 +29,6 @@
         <developer>
             <name>Filipe Lautert</name>
             <email>flautert@liquibase.org</email>
-            <organization>Liquibase</organization>
-            <organizationUrl>https://www.liquibase.com/</organizationUrl>
         </developer>
     </developers>
 
