--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,17 @@ on:
       - synchronize
 
 jobs:
-  #delete this block if the repository you are creating is a PRO extension
-  build-test:
-    uses: liquibase/build-logic/.github/workflows/os-extension-test.yml@main
-    secrets: inherit
+    build:
+        runs-on: ubuntu-latest
+        steps:
+        - uses: actions/checkout@v4
+          with:
+            ref: ${{ github.event.pull_request.head.sha || github.ref }}
+        - name: Set up JDK 8
+          uses: actions/setup-java@v4
+          with:
+            distribution: 'temurin'
+            java-version: '8'
+            cache: "maven""
+        - name: Build with Maven
+          run: mvn -B clean package
