--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,6 @@ jobs:
           with:
             distribution: 'temurin'
             java-version: '8'
-            cache: "maven""
+            cache: "maven"
         - name: Build with Maven
           run: mvn -B clean package
