--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,3 +23,12 @@ jobs:
             cache: "maven"
         - name: Build with Maven
           run: mvn -B clean package
+
+        - name: Archive artifact
+          uses: actions/upload-artifact@v4
+          with:
+            name: liquibase-license-checker
+            path: |
+              target/*.jar
+            
+
